flux/apps/mybibliotheca/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybibliotheca
  namespace: default
spec:
  selector:
    matchLabels:
      app: mybibliotheca
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mybibliotheca
    spec:
      containers:
        - name: mybibliotheca
          image: pickles4evaaaa/mybibliotheca
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              # memory: 100Mi
          ports:
            - containerPort: 5054
          volumeMounts:
            - name: mybibliotheca-data
              mountPath: /app/data
      volumes:
        - name: mybibliotheca-data
          nfs:
            server: datasphere
            path: /Root/Volumes/mybibliotheca
