flux/apps/mybibliotheca/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mybibliotheca
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`library.home`)
      kind: Rule
      services:
        - name: mybibliotheca
          port: 80
    - match: Host(`library.arlodev.co.uk`)
      kind: Rule
      services:
        - name: mybibliotheca
          port: 80
